<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/tb_image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:contentDescription="@string/place_holder_image"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/nih_logo" />

    <Button
        android:id="@+id/btn_analyze"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:text="@string/analyze" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/result_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/result_placeholder"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>