<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="120dp"
        android:contentDescription="@string/logo"
        android:layout_height="wrap_content"
        android:src="@drawable/nih_logo"
        android:layout_gravity="center_horizontal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_username"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:hint="@string/username"
            android:lines="1"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:lines="1"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>

</LinearLayout>